# QtCmake

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  testCmake_zh_CN.ts
